<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>niem-to-data-model-example</artifactId>
        <groupId>org.example</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jaxb-generator</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <niem.dir>../niem-5.0//schema-subset/xsd/</niem.dir>
    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>

            <!-- using jaxb plugin to generate java classes from xsd files -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>2.3.1</version>
                <executions>
                    <execution>
                        <id>xjc</id>
                        <goals>
                            <goal>xjc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>../data-model/src/main/java</outputDirectory>
                    <clearOutputDir>true</clearOutputDir>
                    <generateEpisode>false</generateEpisode>
                    <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
                    <sources>
                        <source>${niem.dir}</source>
                    </sources>
                    <xjcSourceExcludeFilters>
                        <filter implementation="org.codehaus.mojo.jaxb2.shared.filters.pattern.PatternFileFilter">
                            <patterns>
                                <pattern>\.csv</pattern>
                                <pattern>\.xml</pattern>
                                <pattern>\.xjb</pattern>
                            </patterns>
                        </filter>
                    </xjcSourceExcludeFilters>
                    <xjbSources>
                        <xjbSource>${niem.dir}/jaxb-bindings</xjbSource>
                    </xjbSources>
                </configuration>
            </plugin>

        </plugins>


    </build>

</project>